--- a/Server Authentication using Express & NodeJS/project/views/login.ejs
+++ b/Server Authentication using Express & NodeJS/project/views/login.ejs
@@ -1,1 +1,17 @@
+<h1>Login</h1>
+<% if(messages.error) {%>
+  <%= messages.error %>
+<% } %>
+<form action="/login" method="post">
+  <div>
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" required>
+  </div>
+  <div>
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password" required>
+  </div>
+  <button type="submit">Login</button>
+</form>
 
+<a href="/register">Register</a>
